--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <a href="https://github.com/muhammedemin901" class="btn" target="_blank">
                 <i class="fab fa-github-square"></i> Github
             </a>
-            <a href="" class="btn" target="_blank">
+            <a href="https://www.instagram.com/muhammedeminbiyikci/" class="btn" target="_blank">
                 <i class="fab fa-instagram-square"></i> İnstagram
             </a>
-            <a href="" class="btn" target="_blank">
+            <a href="muhammedeminbiyikci@gmail.com" class="btn" target="_blank">
                 <i class="fas fa-envelope-square"></i> E-mail
             </a>
         </div>
