--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="https://www.instagram.com/muhammedeminbiyikci/" class="btn" target="_blank">
                 <i class="fab fa-instagram-square"></i> İnstagram
             </a>
-            <a href="muhammedeminbiyikci@gmail.com" class="btn" target="_blank">
+            <a href="mailto:muhammedeminbiyikci@gmail.com" class="btn" target="_blank">
                 <i class="fas fa-envelope-square"></i> E-mail
             </a>
         </div>
