--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta data-n-head="ssr" data-hid="description" name="description" content="Emin.exe'nin kişsel web sayfası!">
     <meta data-n-head="ssr" data-hid="description" name="description" content="Emin.exe'nin kişsel web sayfası!">
-    <link data-n-head="ssr" rel="icon" type="image/x-icon" href="images.jpg">
+    <link data-n-head="ssr" rel="icon" type="image/x-icon" href="images.png">
     <title>Emin.exe website !</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
